hphp/hack/test/typecheck/interface_override_trait1.php.exp
ERROR: File "interface_override_trait1.php", line 15, characters 7-7:
Constant FOO1 is defined concretely in multiple ancestors (Typing[4374])
  File "interface_override_trait1.php", line 12, characters 9-12:
  One conflicting definition is here
  File "interface_override_trait1.php", line 4, characters 9-12:
  Another conflicting definition is here, inherited through T
ERROR: File "interface_override_trait1.php", line 16, characters 7-7:
Some members in class `A` are incompatible with those declared in type `T` (Typing[4374])
  File "interface_override_trait1.php", line 12, characters 9-12:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_override_trait1.php", line 4, characters 9-12:
  `FOO1` inherited from `T1`
  File "interface_override_trait1.php", line 12, characters 9-12:
  conflicts with constant `FOO1` inherited from `I`.
